# troublemaker

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  progress
app/: CMakeLists.txt  main.cpp
cmake/: clang-format.cmake
include/glad/: glad.h
include/troublemaker/: graphics_pipeline.hpp  window_context.hpp
src/: CMakeLists.txt  glad.c  window_context.cpp
src/shaders/: vertex.glsl
